--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/hotoku/fosi/issues"
   },
-  "homepage": "https://github.com/hotoku/fosi#readme"
+  "homepage": "https://github.com/hotoku/fosi#readme",
+  "devDependencies": {
+    "@types/node": "^16.11.59",
+    "typescript": "^4.8.3"
+  }
 }
