--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "publish": "npm publish --access public",
     "build": "npx tsc",
     "do": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register 'tests/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,12 @@
   },
   "homepage": "https://github.com/hotoku/fosi#readme",
   "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.59",
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
