--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "xmldom-ts": "^0.3.1",
+    "xpath-ts": "^1.3.13"
+  },
+  "dependencies": {
+    "@types/highlight.js": "^10.1.0",
+    "@types/marked": "^4.0.7",
+    "highlight.js": "^11.6.0",
+    "marked": "^4.1.0"
   }
 }
