--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/hotoku/fosi#readme",
   "devDependencies": {
     "@types/chai": "^4.3.3",
+    "@types/express": "^4.17.14",
     "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.59",
     "chai": "^4.3.6",
@@ -34,6 +35,7 @@
   "dependencies": {
     "@types/highlight.js": "^10.1.0",
     "@types/marked": "^4.0.7",
+    "express": "^4.18.1",
     "highlight.js": "^11.6.0",
     "marked": "^4.1.0"
   }
