--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/marked": "^4.0.7",
     "express": "^4.18.1",
     "highlight.js": "^11.6.0",
+    "livereload": "^0.9.3",
     "marked": "^4.1.0"
   }
 }
