--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.3",
     "@types/express": "^4.17.14",
+    "@types/livereload": "^0.9.2",
     "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.59",
     "chai": "^4.3.6",
