--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "xpath-ts": "^1.3.13"
   },
   "dependencies": {
+    "@types/ejs": "^3.1.1",
     "@types/highlight.js": "^10.1.0",
     "@types/marked": "^4.0.7",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "highlight.js": "^11.6.0",
     "livereload": "^0.9.3",
