--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/livereload": "^0.9.2",
     "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.59",
+    "@types/yargs": "^17.0.12",
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "ts-node": "^10.9.1",
@@ -41,6 +42,7 @@
     "express": "^4.18.1",
     "highlight.js": "^11.6.0",
     "livereload": "^0.9.3",
-    "marked": "^4.1.0"
+    "marked": "^4.1.0",
+    "yargs": "^17.5.1"
   }
 }
