--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "highlight.js": "^11.6.0",
     "livereload": "^0.9.3",
     "marked": "^4.1.0",
+    "node-html-parser": "^6.1.0",
     "yargs": "^17.5.1"
   }
 }
