--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.3",
     "@types/express": "^4.17.14",
+    "@types/jsdom": "^20.0.0",
     "@types/livereload": "^0.9.2",
     "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.59",
@@ -41,6 +42,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "highlight.js": "^11.6.0",
+    "jsdom": "^20.0.0",
     "livereload": "^0.9.3",
     "marked": "^4.1.0",
     "node-html-parser": "^6.1.0",
