--- a/package.json
+++ b/package.json
@@ -22,30 +22,27 @@
   "homepage": "https://github.com/hotoku/fosi#readme",
   "devDependencies": {
     "@types/chai": "^4.3.3",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.14",
+    "@types/highlight.js": "^10.1.0",
     "@types/jsdom": "^20.0.0",
     "@types/livereload": "^0.9.2",
+    "@types/marked": "^4.0.7",
     "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.59",
     "@types/yargs": "^17.0.12",
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3",
-    "xmldom-ts": "^0.3.1",
-    "xpath-ts": "^1.3.13"
+    "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@types/ejs": "^3.1.1",
-    "@types/highlight.js": "^10.1.0",
-    "@types/marked": "^4.0.7",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "highlight.js": "^11.6.0",
     "jsdom": "^20.0.0",
     "livereload": "^0.9.3",
     "marked": "^4.1.0",
-    "node-html-parser": "^6.1.0",
     "yargs": "^17.5.1"
   }
 }
