--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hotoku/fosi",
-  "version": "1.1.0xs",
+  "version": "1.1.0",
   "description": "livereloading server for markdown editing ",
   "main": "./dist/index.js",
   "bin": {
