--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hotoku/fosi",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "livereloading server for markdown editing ",
   "main": "./dist/index.js",
   "bin": {
@@ -10,7 +10,8 @@
     "release": "npm publish --access public",
     "build": "npx tsc -p .",
     "start": "node dist/index.js -i samples/sample.md -f",
-    "test": "mocha -r ts-node/register 'tests/**/*.ts'"
+    "test": "mocha -r ts-node/register 'tests/**/*.ts'",
+    "bump": "bump"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.59",
     "@types/yargs": "^17.0.12",
+    "bump-version": "github:ianstormtaylor/bump",
     "chai": "^4.3.6",
     "mocha": "^10.0.0",
     "ts-node": "^10.9.1",
