--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsdom": "^20.0.0",
     "livereload": "^0.9.3",
     "marked": "^4.1.0",
+    "portfinder": "^1.0.32",
     "yargs": "^17.5.1"
   }
 }
