--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "npx tsc -p .",
     "start": "node dist/index.js -i samples/sample.md -f",
     "test": "mocha -r ts-node/register 'tests/**/*.ts'",
-    "bump": "bump"
+    "bump": "bump",
+    "wtch": "tsc --watch"
   },
   "repository": {
     "type": "git",
